# phoenix_attendance_rebates

./: .gitignore  HISTORY.md  justfile  main.py  pyproject.toml  requirements.txt
.gitA/: config  index
.gitA/logs/refs/heads/: master
.gitA/refs/heads/: master
src/attendance_rebates/: __init__.py  _rename.py  common.py  config.py  constants.py  email_process.py  main.py  menu.py  module_caller.py  player.py  psilogger.py  rebate_process.py  root.py  session.py  text.py  verify.py
src/attendance_rebates/forms/: frm_config.py  frm_emails.py  frm_main.py  frm_rebate.py  frm_report.py  frm_verify.py
tests/: context.py  test_config.py  test_email_files.py  test_player.py  test_process.py  test_session.py  test_version.py
tests/test_data/config/: config.toml
tests/test_data/inputs/: bbo_2023_11.csv  calcs_2023_11.xlsx  cf_2023_08.csv  f2f_2023_11.csv  f2f_2023_11.xlsx  membership_202311.csv
tests/test_data/outputs/: bbo_att_rebate_2023_11.csv  bbo_att_report_2023_11.csv  bbo_email_2023_11.csv  bbo_reset_2023_11.csv  cf_2023_11.csv  f2f_att_rebate_2023_11.csv  f2f_att_report_2023_11.csv  f2f_email_2023_11.csv  f2f_reset_2023_11.csv
