[project]
name = "attendance-rebates"
version = "0.1.0"
description = "Attendance rebates for Phoenix Bridge Club"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "asttokens>=3.0.0",
    "clipboard>=0.0.4",
    "colorama>=0.4.6",
    "executing>=2.2.0",
    "iniconfig>=2.1.0",
    "markdown>=3.8.2",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pluggy>=1.6.0",
    "psi-toml>=0.0.17",
    "psiconfig>=0.0.14",
    "psiutils>=0.2.10",
    "pygments>=2.19.2",
    "pygobject>=3.54.2",
    "pyperclip>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
    "structlog>=25.4.0",
    "tkinterweb>=4.4.4",
    "tkinterweb-tkhtml>=1.1.1",
]

[dependency-groups]
dev = [
    'pytest',
    "python-mock>=0.0.3",
    "freezegun>=1.5.3",
    "icecream>=2.1.4",
]

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'
